crates/rome_formatter/tests/specs/prettier/method-chain/pr-7889.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 121
expression: pr-7889.js

---
# Input
```js
const Profile = view.with({ name: (state) => state.name }).as((props) => (
  <div>
    <h1>Hello, {props.name}</h1>
  </div>
))

const Profile2 = view.with({ name }).as((props) => (
  <div>
    <h1>Hello, {props.name}</h1>
  </div>
))

```

# Output
```js
const Profile = view.with({ name: (state) => state.name }).as((props) => (
  <div>
    <h1>Hello, {props.name}</h1>
  </div>
)
)

const Profile2 = view.
with({ name })
.as((props) => (
  <div>
    <h1>Hello, 
{
  props.name;
}
</h1>
  </div>

))

```

# Errors
```
error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
  ┌─ pr-7889.js:2:3
  │  
2 │ ┌   <div>
3 │ │     <h1>Hello, {props.name}</h1>
  │ └─────────────^ TypeScript only syntax

error[SyntaxError]: expected `,` but instead found `.`
  ┌─ pr-7889.js:3:22
  │
3 │     <h1>Hello, {props.name}</h1>
  │                      ^ unexpected

error[SyntaxError]: expected `')'` but instead found `}`
  ┌─ pr-7889.js:3:27
  │
3 │     <h1>Hello, {props.name}</h1>
  │                           ^ unexpected

error[SyntaxError]: expected `,` but instead found `<`
  ┌─ pr-7889.js:4:3
  │
4 │   </div>
  │   ^ unexpected

error[SyntaxError]: expected an expression but instead found ')'
  ┌─ pr-7889.js:5:1
  │
5 │ ))
  │ ^ Expected an expression here

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ pr-7889.js:5:2
  │  
1 │ ┌ const Profile = view.with({ name: (state) => state.name }).as((props) => (
2 │ │   <div>
3 │ │     <h1>Hello, {props.name}</h1>
4 │ │   </div>
5 │ │ ))
  │ │  ^ An explicit or implicit semicolon is expected here...
  │ └─' ...Which is required to end this statement

error[SyntaxError]: expected a statement but instead found '.'
  ┌─ pr-7889.js:7:37
  │
7 │ const Profile2 = view.with({ name }).as((props) => (
  │                                     ^ Expected a statement here

error[SyntaxError]: `with` statements are not allowed in strict mode
  ┌─ pr-7889.js:7:23
  │
7 │ const Profile2 = view.with({ name }).as((props) => (
  │                       ^^^^^^^^^^^^^^

error[SyntaxError]: expected a statement but instead found '.as((props) => (
  <div>
    <h1>Hello,'
  ┌─ pr-7889.js:7:37
  │  
7 │   const Profile2 = view.with({ name }).as((props) => (
  │ ┌─────────────────────────────────────^
8 │ │   <div>
9 │ │     <h1>Hello, {props.name}</h1>
  │ └──────────────^ Expected a statement here

error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
  ┌─ pr-7889.js:9:28
  │
9 │     <h1>Hello, {props.name}</h1>
  │                            ^ TypeScript only syntax

error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
   ┌─ pr-7889.js:10:3
   │
10 │   </div>
   │   ^ TypeScript only syntax

error[SyntaxError]: expected an expression but instead found ')'
   ┌─ pr-7889.js:11:1
   │
11 │ ))
   │ ^ Expected an expression here


```


